--- a/index.html
+++ b/index.html
@@ -656,8 +656,7 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> </p>
     </div>
     <!-- End copyright  -->
 
